# Deepsearch

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: ai.rs  clip.rs  main.rs  open.rs  preview.rs  tui.rs  util.rs
crates/core/: Cargo.toml
crates/core/benches/: bench.rs
crates/core/examples/: scale.rs
crates/core/src/: extract.rs  index.rs  indexer.rs  lib.rs  query.rs  tokenize.rs
